# LeanContext

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  bench.py  demo.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: ARCHITECTURE.md
examples/: basic_usage.py  validate_caching.py
leancontext/: __init__.py  cli.py  core.py  cost.py  fidelity.py  messages.py  paging.py  tokens.py
leancontext/integrations/: __init__.py  _common.py  anthropic_native.py  clients.py  decorator.py  frameworks.py  litellm.py  mcp_server.py  otel.py  proxy.py
leancontext/reducers/: __init__.py  base.py  diff.py  html.py  json_data.py  logs.py  stacktrace.py  table.py
tests/: test_cache.py  test_concurrency.py  test_core.py  test_differentiators.py  test_fidelity.py  test_frameworks.py  test_gateway.py  test_gemini.py  test_limits.py  test_mcp.py  test_messages.py  test_otel.py  test_paging.py  test_proxy.py  test_reducers.py  test_table.py  test_tokens.py
