[project]
name = "leancontext"
version = "0.0.1"
description = "Deterministic, type-aware reduction of agent tool outputs at the source. Cut LLM token cost without making the agent do less."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Pankaj" }]
keywords = ["llm", "agents", "tokens", "cost", "context", "compression", "rag"]
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5"]
otel = ["opentelemetry-api>=1.20"]
integrations = ["fastapi", "httpx", "starlette", "openai", "anthropic", "litellm"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "pytest-cov", "ruff>=0.5", "mypy>=1.8", "opentelemetry-sdk>=1.20"]

[project.scripts]
leancontext = "leancontext.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leancontext"]

[tool.pytest.ini_options]
# pytest-asyncio: pin the fixture loop scope so it stops warning about the unset default.
asyncio_default_fixture_loop_scope = "function"
# Silence a urllib3/chardet version-mismatch warning from the local conda env (not our code).
filterwarnings = ["ignore::UserWarning:requests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses Body/Depends/Query as argument defaults by design.
extend-immutable-calls = ["fastapi.Body", "fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
