[project]
name = "leancontext"
version = "0.0.1"
description = "Deterministic, type-aware reduction of agent tool outputs at the source. Cut LLM token cost without making the agent do less."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Pankaj" }]
keywords = ["llm", "agents", "tokens", "cost", "context", "compression", "rag"]
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.12"]
otel = ["opentelemetry-api>=1.39"]
integrations = ["fastapi>=0.125", "httpx>=0.28", "starlette>=0.45", "openai>=2.14", "anthropic>=0.87", "litellm>=1.82"]
dev = ["pytest>=8.3", "pytest-asyncio>=1.3", "pytest-cov>=7", "ruff>=0.15", "mypy>=1.19", "opentelemetry-sdk>=1.39"]

[project.scripts]
leancontext = "leancontext.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leancontext"]

[tool.pytest.ini_options]
# pytest-asyncio: pin the fixture loop scope so it stops warning about the unset default.
asyncio_default_fixture_loop_scope = "function"
# Silence a urllib3/chardet version-mismatch warning from the local conda env (not our code).
filterwarnings = ["ignore::UserWarning:requests"]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses Body/Depends/Query as argument defaults by design.
extend-immutable-calls = ["fastapi.Body", "fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
